--- a/report/reinburse_report.xml
+++ b/report/reinburse_report.xml
@@ -11,12 +11,190 @@
 
         <template id="reinburse_report_view">
            <t t-call="report.html_container">
-                <t t-foreach="docs" t-as="doc">
+               <t t-foreach="docs" t-as="o">
                      <div class="page">
-                         <div class="oe_structure"/>
-                            <h1>Hello Reinburs</h1>
+                             <div class="oe_structure"/>
+                                <!--<div class="row">-->
+                                       <!--<div class="col-xs-5 col-xs-offset-1">-->
+                                           <!--<div t-field="o.partner_id"-->
+                                                <!--t-options='{"widget": "contact", "fields": ["address", "name", "phone"], "no_marker": True, "phone_icons": True}'/>-->
+                                                <!--<p t-if="o.partner_id.vat"><t t-esc="o.company_id.country_id.vat_label or 'TIN'"/>: <span t-field="o.partner_id.vat"/></p>-->
+                                       <!--</div>-->
+                                <!--</div>-->
+                             <h2>Reimburse # <span t-field="o.number"/></h2>
+
+                                 <div class="row mt32 mb32">
+                                     <div t-if="o.partner_id" class="col-xs-3">
+                                         <strong>Vendor :</strong>
+                                         <p t-field="o.partner_id"/>
+                                     </div>
+                                    <div t-if="o.name" class="col-xs-3">
+                                        <strong>Payment Reference:</strong>
+                                        <p t-field="o.name"/>
+                                    </div>
+                                    <div t-if="o.date" class="col-xs-3">
+                                        <strong>Order Date:</strong>
+                                        <p t-field="o.date"/>
+                                    </div>
+                                     <div t-if="o.date_due" class="col-xs-3">
+                                        <strong>Due Date</strong>
+                                         <p t-field="o.date_due"/>
+                                     </div>
+                                     <div t-if="o.company_id" class="col-xs-3">
+                                         <strong>Company :</strong>
+                                         <p t-field="o.company_id"/>
+                                     </div>
+                                 </div>
+
+                                 <table class="table table-condensed">
+                                    <thead>
+                                        <tr>
+                                            <th><strong>Product</strong></th>
+                                            <th><strong>Description</strong></th>
+                                            <th><strong>Taxes</strong></th>
+                                            <th class="text-right"><strong>Qty</strong></th>
+                                            <th class="text-right"><strong>Unit Price</strong></th>
+                                            <th class="text-right"><strong>Amount</strong></th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr t-foreach="o.line_ids" t-as="line">
+                                            <td>
+                                                <span t-field="line.product_id"/>
+                                            </td>
+                                            <td>
+                                                <span t-field="line.name"/>
+                                            </td>
+                                            <td>
+                                                <span t-esc="', '.join(map(lambda x: x.name, line.tax_ids))"/>
+                                            </td>
+                                             <td class="text-right">
+                                                <span t-field="line.quantity"/>
+
+                                             </td>
+                                            <td class="text-right">
+                                                <span t-field="line.price_unit"  t-options='{"widget": "monetary", "display_currency": o.currency_id}'/>
+                                            </td>
+                                            <td class="text-right">
+                                                 <span t-field="line.price_subtotal"
+                                                    t-options='{"widget": "monetary", "display_currency": o.currency_id}'/>
+                                            </td>
+                                        </tr>
+                                    </tbody>
+
+                                 </table>
+
+                                <div class="row">
+                                    <!--<div class="col-xs-8">-->
+                                        <!--<strong>Says :</strong>-->
+                                        <!--<i><span t-esc="line.amount_to_text(line.price_subtotal, o.currency_id)"/> </i>-->
+                                    <!--</div>-->
+                                    <div class="col-xs-4 pull-right">
+                                        <table class="table table-condensed">
+                                            <tr class="border-black">
+                                                <td><strong>Tax Amount</strong></td>
+                                                <td class="text-right">
+                                                    <span t-field="o.tax_amount"/>
+                                                </td>
+                                            </tr>
+                                            <tr>
+                                                <td><strong>Tax Correction</strong></td>
+                                                <td class="text-right">
+                                                    <span t-field="o.tax_correction"/>
+                                                </td>+
+                                            </tr>
+                                            <tr>
+                                                <td><strong>Amount</strong></td>
+                                                <td class="text-right">
+                                                    <span t-field="o.amount"/>
+                                                </td>
+                                            </tr>
+                                        </table>
+                                    </div>
+                                </div>
+                                 <table class="table table-bordered">
+                                     <tr>
+                                        <td>
+                                            <div class="col-xs-12">
+                                                <strong>Alamat Faktur Pajak</strong>
+                                                <p>
+                                                    PT Prasetia Juvisk Sinergi, NPWP : 82.391.097.1-075.000
+                                                    JL. ANTARA GD ARUNA LT. 3 NO. 47 PASAR BARU SAWAH BESAR JAKARTA PUSAT DKI JAKARTA
+                                                </p>
+                                            </div>
+                                        </td>
+                                    </tr>
+                                 </table>
+
+                             <div class="row" style="margin-top:70px">
+                                            <div class="col-xs-3">
+
+                                            </div>
+                                            <div class="col-xs-3">
+                                                <table class="table table-condensed">
+                                                    <tr>
+                                                         <td style="border:0">Confirmed :</td>
+                                                    </tr>
+                                                    <tr>
+                                                         <td style="border:0">Date : </td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td style="text-align:center; border:0" height="80px"><!--<img t-attf-src="data:image/*;base64,{{o.create_uid.hand_signature}}" style="width:80px;height80px"/>--></td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td style="border:0" class="text-center">
+                                                            <span t-field="o.create_uid.name" />
+                                                        </td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td style="border:0">* Please Refax after Receive</td>
+                                                    </tr>
+                                                </table>
+                                            </div>
+
+                                         <div class="col-xs-3">
+                                                <table class="table table-condensed">
+                                                    <tr>
+                                                         <td style="border:0">Approved By:</td>
+                                                    </tr>
+                                                    <tr>
+                                                         <td style="border:0">Date : </td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td style="text-align:center; border:0" height="80px"><!--<img t-attf-src="data:image/*;base64,{{o.create_uid.hand_signature}}" style="width:80px;height80px"/>--></td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td style="border:0" class="text-center">
+                                                            Pungki S. Ananta
+                                                        </td>
+                                                    </tr>
+                                                    <tr class="border-black">
+                                                        <td class="text-center">Manager Marketing</td>
+                                                    </tr>
+                                                </table>
+                                         </div>
+                                            <div class="col-xs-3 pull-right">
+                                                <table class="table table-condensed">
+                                                    <tr>
+                                                         <td style="border:0">Approved by: </td>
+                                                    </tr>
+                                                    <tr>
+                                                         <td style="border:0">Date : </td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td style="text-align:center; border:0" height="80px"><!--<img t-attf-src="data:image/*;base64,{{o.create_uid.hand_signature}}" style="width:80px;height80px"/>--></td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td class="text-center" style="border:0">ARYA SETIADHARMA</td>
+                                                    </tr>
+                                                    <tr class="border-black">
+                                                        <td class="text-center">Direktur</td>
+                                                    </tr>
+                                                </table>
+                                            </div>
+                             </div>
                      </div>
-                </t>
+               </t>
            </t>
         </template>
     </data>
