--- a/static/src/css/invoice_report.css
+++ b/static/src/css/invoice_report.css
@@ -67,6 +67,13 @@ table td, table th { border: 1px solid black; padding: 5px; }
 	border: 1px solid black;
 }
 
+#meta-4{
+    margin-top: 100px;
+    float: left;
+	padding: 5px;
+	border: 1px solid black;
+}
+
 #meta-3, td.meta-head-3 {
     text-align: left;
     background: #fff;
