--- a/report/invoice_report.xml
+++ b/report/invoice_report.xml
@@ -1,27 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
     <data>
-
         <template id="report_invoice_document_inherit" inherit_id="account.report_invoice_document">
             <xpath expr="//h2" position="replace">
                 <h2>
 
-                    <span t-if="o.type == 'out_invoice' and (o.state == 'open' or o.state == 'paid')">Invoice</span>
-                    <span t-if="o.type == 'out_invoice' and o.state == 'proforma2'">PRO-FORMA</span>
-                    <span t-if="o.type == 'out_invoice' and o.state == 'draft'">Draft Invoice</span>
-                    <span t-if="o.type == 'out_invoice' and o.state == 'cancel'">Cancelled Invoice</span>
-                    <span t-if="o.type == 'out_refund'">Refund</span>
-                    <span t-if="o.type == 'in_refund'">Vendor Refund</span>
-                    <span t-if="o.type == 'in_invoice'">Payment Request</span>
+                    
                     <span t-field="o.number"/>
                 </h2>
             </xpath>
+
+           <!--<xpath expr="//p[@t-if='o.comment']" position="before">-->
+                <!--<p>-->
+                   <!---->
+                    <!--<strong>Says: </strong>-->
+                    <!--<i><span t-esc="o.amount_to_text(o.amount_total, o.currency_id)"/></i>-->
+                <!--</p>-->
+            <!--</xpath>-->
 
             <xpath expr="//p[@t-if='o.comment']" position="after">
                 <div class="row" style="margin-top:0px">
                         <div class="col-xs-3">
 
                         </div>
+
                         <div class="col-xs-3">
                                 <table class="table table-condensed">
                                         <tr>
@@ -45,6 +47,7 @@
                                         </tr>
                                 </table>
                         </div>
+
                         <div class="col-xs-3">
                                     <table class="table table-condensed">
                                         <tr>
@@ -68,6 +71,7 @@
                                         </tr>
                                     </table>
                         </div>
+
                         <div class="col-xs-3">
                             <table class="table table-condensed">
                                 <tr>
