--- a/view/invoice.xml
+++ b/view/invoice.xml
@@ -37,5 +37,16 @@
                 </field>
             </field>
         </record>
+
+        <record id="invoice_supplier_form" model="ir.ui.view">
+            <field name="name">mymodulname.vendorbill.tree</field>
+            <field name="model">account.invoice</field>
+            <field name="inherit_id" ref="account.invoice_supplier_form" />
+            <field name="arch" type="xml">
+                <field name="date_due" position="after">
+                    <field name="sign_by" string="Approved"/>
+                </field>
+            </field>
+        </record>
     </data>
 </odoo>
