--- a/view/equipment_view.xml
+++ b/view/equipment_view.xml
@@ -71,19 +71,15 @@
                     <field name="in_use"/>
                 </xpath>
                 <xpath expr="//field[@name='name']" position="after">
-                    <field name="project_area"/>
+                    <field name="project_name"/>
                 </xpath>
                 <xpath expr="//field[@name='serial_no']" position="after">
                      <field name="site_reference"/>
-                    <field name="site_area"/>
-
+                     <field name="site_area"/>
                 </xpath>
                 <xpath expr="//field[@name='category_id']" position="after">
                     <field name="site_owner_name"/>
                 </xpath>
-                <!--<xpath expr="//field[@name='partner_id']" position="after">-->
-                    <!--<field name="site_area"/>-->
-                <!--</xpath>-->
             </field>
         </record>
 
