--- a/view/batteryrent_view.xml
+++ b/view/batteryrent_view.xml
@@ -52,6 +52,13 @@
                                 </page>
                             </notebook>
                      </sheet>
+                    <!--membuat log note and send message-->
+                     <sheet>
+                         <div class="oe_chatter">
+                            <field name="message_follower_ids" widget="mail_followers"/>
+                            <field name="message_ids" widget="mail_thread"/>
+                         </div>
+                     </sheet>
                 </form>
             </field>
         </record>
