--- a/view/site.xml
+++ b/view/site.xml
@@ -28,6 +28,10 @@
                         <field name="region_id"/>
                         <field name="type_id"/>
                     </group>
+                     <div class=" oe_chatter">
+                        <field name="message_follower_ids" widget="mail_followers"/>
+                        <field name="message_ids" widget="mail_thread"/>
+                     </div>
                 </form>
             </field>
         </record>
